// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemChooser #setupItemSections for chooser renders current selection if intialItems is defined (no headers) 1`] = `
[
  {
    "data": [
      {
        "chosen": true,
        "id": "1",
      },
      {
        "chosen": true,
        "id": "2",
      },
      {
        "chosen": true,
        "id": "3",
      },
    ],
    "label": undefined,
  },
]
`;

exports[`ItemChooser #setupItemSections for chooser renders current selection with header if initialItems and addedItems are defined  1`] = `
[
  {
    "data": [
      {
        "chosen": false,
        "id": "1",
      },
    ],
    "label": "Current Selection",
  },
  {
    "data": [
      {
        "chosen": true,
        "id": "2",
      },
      {
        "chosen": true,
        "id": "3",
      },
    ],
    "label": "Added",
  },
]
`;

exports[`ItemChooser #setupItemSections for chooser renders sections 1`] = `
[
  {
    "data": [
      {
        "chosen": false,
        "id": "1",
      },
      {
        "chosen": false,
        "id": "2",
      },
      {
        "chosen": false,
        "id": "3",
      },
    ],
    "label": "Current Selection",
  },
  {
    "data": [
      {
        "chosen": true,
        "id": "5",
      },
    ],
    "label": "Added",
  },
]
`;

exports[`ItemChooser #setupItemSections for chooser renders suggested items when search term supplied 1`] = `
[
  {
    "data": [
      {
        "chosen": true,
        "id": "1",
      },
      {
        "chosen": false,
        "id": "2",
      },
      {
        "chosen": false,
        "id": "3",
      },
    ],
  },
]
`;

exports[`ItemChooser #setupItemSections for chooser renders suggested items when search term supplied 2`] = `
[
  {
    "data": [
      {
        "chosen": true,
        "id": "1",
      },
      {
        "chosen": false,
        "id": "2",
      },
      {
        "chosen": false,
        "id": "3",
      },
    ],
  },
]
`;

exports[`ItemChooser #setupItemSections for picker renders default suggested items 1`] = `
[
  {
    "data": [
      {
        "chosen": false,
        "id": "1",
      },
      {
        "chosen": false,
        "id": "2",
      },
      {
        "chosen": false,
        "id": "3",
      },
    ],
    "label": "Recent Items",
  },
]
`;

exports[`ItemChooser #setupItemSections for picker renders sections 1`] = `[]`;

exports[`ItemChooser #setupItemSections for picker renders suggested items when search term supplied 1`] = `
[
  {
    "data": [
      {
        "id": "2",
      },
      {
        "id": "3",
      },
    ],
  },
]
`;

exports[`ItemChooser full renders as expected 1`] = `
<View>
  <View>
    <View>
      <Icon
        name="Search"
      />
      <TextInput
        autoCapitalize="none"
        autoCorrect={false}
        autoFocus={true}
        editable={true}
        onChangeText={[Function]}
        onFocus={[MockFunction]}
        underlineColorAndroid="transparent"
      />
    </View>
  </View>
  <RCTScrollView
    ListFooterComponent={<View />}
    data={[]}
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    keyboardShouldPersistTaps="handled"
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    renderItem={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`ItemChooser shallow renders as expected 1`] = `
<View>
  <ItemChooserListHeader
    ItemRowComponent={[Function]}
    autoFocus={true}
    clearSearchTerm={[Function]}
    fetchSearchSuggestions={[Function]}
    getSearchSuggestions={[Function]}
    initialItems={[]}
    navigation={
      {
        "setOptions": [MockFunction],
        "setParams": [MockFunction],
      }
    }
    onFocus={[MockFunction]}
    route={
      {
        "params": {
          "ItemRowComponent": [Function],
          "fetchSearchSuggestions": [Function],
          "getSearchSuggestions": [Function],
          "initialItems": [
            {
              "id": "member1",
            },
            {
              "id": "member2",
            },
          ],
          "screenTitle": "Screen Title",
          "updateItems": [MockFunction],
        },
      }
    }
    setSearchTerm={[Function]}
    suggestedItems={[]}
    t={[Function]}
  />
  <SectionList
    ListFooterComponent={<View />}
    keyExtractor={[Function]}
    keyboardShouldPersistTaps="handled"
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    sections={[]}
    stickySectionHeadersEnabled={true}
  />
</View>
`;
